--- a/style.css
+++ b/style.css
@@ -63,21 +63,25 @@ h1 {
 }
 
 #button_1 {
+  display: flex;
+  justify-content: center;
   position: absolute;
   border-radius: 100px;
   padding: 15px;
   width: 150px;
-  top: 750px;
+  top: 790px;
   left: 200px;
   border: solid #00457c 2px;
 }
 
 #button_2 {
+  display: flex;
+  justify-content: center;
   position: absolute;
   border-radius: 100px;
   padding: 15px;
   width: 150px;
-  top: 750px;
+  top: 790px;
   left: 385px;
   border: solid #00457c 2px;
 }
@@ -119,6 +123,6 @@ h1 {
   position: absolute;
   width: 160px;
   height: 90px;
-  top: 875px;
-  left: 200px;
+  top: 900px;
+  left: 205px;
 }
